--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 	<link rel="stylesheet" type="text/css" href="./lib/bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
+	<h1> Automation Playgroung2</h1><br>
+
+	<button type="button" name="button" id="btn">click </button>
+
+	<div id="output">
+		
+	</div>
+
+
 
 	<script type="text/javascript" src="./lib/bower_components/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="./lib/bower_components/bootstrap/dist/js/bootstrap.js"></script>
